--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -45,3 +45,11 @@ footer{
     justify-content: center;
     align-items: center;
 }
+
+button:hover{
+    background-color:dodgerblue;
+    color:black;
+    cursor: pointer;
+    font-size: 18px;
+    transition-duration: 0.5s;
+}
